.data/projects/darklua-0.17.2/src/rules/snapshots/darklua_core__rules__append_text_comment__test__append_text_comment_with_text_at_end.snap
---
source: src/rules/append_text_comment.rs
expression: rule
---
{
  "rule": "append_text_comment",
  "location": "end",
  "text": "content"
}
